# synchro

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: INSPIRATIONS.md  LEARNINGS.md
skillmine/: __init__.py  cli.py
synchro/: __init__.py  cli.py
tests/: __init__.py  test_skillmine.py  test_synchro.py
