[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "synchro-skills"
version = "0.1.0"
description = "Back up, audit, restore, and sync skills across agent tools."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

[project.scripts]
synchro = "synchro.cli:main"

[project.urls]
Repository = "https://github.com/somnus0x/synchro"

[tool.setuptools]
packages = ["synchro"]
